CHANGE LOG

2019-XX-XX - Version 4.0.0-beta
--------------------------------------------
Bumped minimum supported version of PHP to 7.2
If trying to retrieve non-existent response value, NULL is returned in AuthnetJsonResponse::__get()
Added AuthnetJson::BOUNDLESS_OCCURRENCES to indicate an endless subscription
Added constructor to Authnet exceptions
Removed unused AuthnetInvalidParameterException class
Updated unit tests for phpunit 8
Added phpunit to require-dev
Shiny badges for the README
Cleaned up HTML and CSS in examples
Minor formatting changes

2019-06-03 - Version 3.1.9
--------------------------------------------
Returned better error message when creating Webhook
Removed unnecessary suppression operators by checking if a variable is set in the __get() magic method

2019-01-26 - Version 3.1.8
--------------------------------------------
Removed not actually missing return statement to AuthnetWebhooksRequest::delete
Reduced complexity of AuthnetApiFactory::getWebServiceURL()
Reduced complexity of AuthnetWebhooksResponse::getEventTypes()
Reduced complexity of AuthnetWebhook::getAllHeaders()

2019-01-22 - Version 3.1.7
--------------------------------------------
Fixed incorrect and/or incomplete docblock comments
Added missing return statement to AuthnetWebhooksRequest::delete
Added ext-curl and ext-json to composer.json as dependencies
Minor formatting changes

2019-01-21 - Version 3.1.6
--------------------------------------------
Changed SIM algorithm to SHA512
Added FILTER_FLAG_ALLOW_THOUSAND when validating amount for SIM fingerprint
Added the requirements section to README.md
Added notice about AuthnetJSON 4.0 PHP compatibility level changing.
Used sprintf() for string formatting with variables
Minor formatting changes

2019-01-02 - Version 3.1.5
--------------------------------------------
Updated all usage of array() to []
Added examples/cim/createCustomerProfileRequestMultiplePayAccounts.php to demonstrate adding multiple payment accounts